[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-cloak"
version = "0.1.0"
description = "Time-Based Steganography"
requires-python = ">=3.13"
dependencies = [
    "bitstring",
    "click",
    "tornado",
    "requests",
    "rich",
    "humanize",
    "pillow",
]

[project.scripts]
temporal-cloak = "temporal_cloak.cli:cli"
benchmark = "temporal_cloak.benchmark:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
